// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cleanDb 1`] = `86400000`;

exports[`cleanDb 2`] = `30000`;

exports[`launchSource debug not windows 1`] = `
Array [
  Array [
    "npm run tool source=source assets=asset1,asset2,asset3 &> tool.source.asset1.asset2.asset3.log",
    Object {
      "shell": "/bin/bash",
    },
  ],
]
`;

exports[`launchSource debug not windows 2`] = `
Object {
  "source": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 1234567890,
    "source": "source",
  },
}
`;

exports[`launchSource debug windows 1`] = `
Array [
  Array [
    "npm run tool source=source assets=asset1,asset2,asset3 >> tool.source.asset1.asset2.asset3.log",
    Object {},
  ],
]
`;

exports[`launchSource debug windows 2`] = `
Object {
  "source": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 1234567890,
    "source": "source",
  },
}
`;

exports[`launchSource fail not windows 1`] = `
Array [
  Array [
    "npm run tool source=source assets=asset1,asset2,asset3 &> tool.source.asset1.asset2.asset3.log",
    Object {
      "shell": "/bin/bash",
    },
  ],
]
`;

exports[`launchSource fail not windows 2`] = `
Object {
  "source": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 1234567890,
    "source": "source",
  },
}
`;

exports[`launchSource fail not windows 3`] = `
Array [
  Array [
    "tool",
    Object {
      "debug": false,
      "forceREST": false,
      "live": false,
    },
    "source",
    Array [
      "asset1",
      "asset2",
      "asset3",
    ],
  ],
]
`;

exports[`launchSource fail windows 1`] = `
Array [
  Array [
    "npm run tool source=source assets=asset1,asset2,asset3 dynamo azure >> tool.source.asset1.asset2.asset3.log",
    Object {},
  ],
]
`;

exports[`launchSource fail windows 2`] = `
Object {
  "source": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 1234567890,
    "source": "source",
  },
}
`;

exports[`launchSource fail windows 3`] = `
Array [
  Array [
    "tool",
    Object {
      "azure": true,
      "debug": false,
      "dynamo": true,
      "forceREST": false,
      "live": false,
    },
    "source",
    Array [
      "asset1",
      "asset2",
      "asset3",
    ],
  ],
]
`;

exports[`launchSource forceREST not windows 1`] = `
Array [
  Array [
    "npm run tool source=source assets=asset1,asset2,asset3 rest&> tool.source.asset1.asset2.asset3.log",
    Object {
      "shell": "/bin/bash",
    },
  ],
]
`;

exports[`launchSource forceREST not windows 2`] = `
Object {
  "source": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 1234567890,
    "source": "source",
  },
}
`;

exports[`launchSource forceREST windows 1`] = `
Array [
  Array [
    "npm run tool source=source assets=asset1,asset2,asset3 gcp server rest>> tool.source.asset1.asset2.asset3.log",
    Object {},
  ],
]
`;

exports[`launchSource forceREST windows 2`] = `
Object {
  "source": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 1234567890,
    "source": "source",
  },
}
`;

exports[`launchSource live not windows 1`] = `
Array [
  Array [
    "npm run tool source=source assets=asset1,asset2,asset3 &> tool.source.asset1.asset2.asset3.log",
    Object {
      "shell": "/bin/bash",
    },
  ],
]
`;

exports[`launchSource live not windows 2`] = `
Object {
  "source": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 1234567890,
    "source": "source",
  },
}
`;

exports[`launchSource live windows 1`] = `
Array [
  Array [
    "npm run tool source=source assets=asset1,asset2,asset3 >> tool.source.asset1.asset2.asset3.log",
    Object {},
  ],
]
`;

exports[`launchSource live windows 2`] = `
Object {
  "source": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 1234567890,
    "source": "source",
  },
}
`;

exports[`launchSource success not windows 1`] = `
Array [
  Array [
    "npm run tool source=source assets=asset1,asset2,asset3 &> tool.source.asset1.asset2.asset3.log",
    Object {
      "shell": "/bin/bash",
    },
  ],
]
`;

exports[`launchSource success not windows 2`] = `
Object {
  "source": Object {
    "failCount": 0,
    "instance": Object {
      "on": [MockFunction] {
        "calls": Array [
          Array [
            "exit",
            [Function],
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      },
    },
    "lastFailTimestamp": 1234567890,
    "source": "source",
  },
}
`;

exports[`launchSource success not windows 3`] = `
Array [
  Array [
    "exit",
    [Function],
  ],
]
`;

exports[`launchSource success windows 1`] = `
Array [
  Array [
    "npm run tool source=source assets=asset1,asset2,asset3 aws >> tool.source.asset1.asset2.asset3.log",
    Object {},
  ],
]
`;

exports[`launchSource success windows 2`] = `
Object {
  "source": Object {
    "failCount": 0,
    "instance": Object {
      "on": [MockFunction] {
        "calls": Array [
          Array [
            "exit",
            [Function],
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      },
    },
    "lastFailTimestamp": 1234567890,
    "source": "source",
  },
}
`;

exports[`launchSource success windows 3`] = `
Array [
  Array [
    "exit",
    [Function],
  ],
]
`;

exports[`launchSource success windows 4`] = `
Array [
  Array [
    "tool",
    Object {
      "aws": true,
      "debug": false,
      "forceREST": false,
      "live": false,
    },
    "source",
    Array [
      "asset1",
      "asset2",
      "asset3",
    ],
  ],
]
`;

exports[`retry after long enought time 1`] = `
Object {
  "failCount": 1,
  "instance": undefined,
  "lastFailTimestamp": 1234567890,
  "source": "source",
}
`;

exports[`retry after long enought time 2`] = `
Array [
  Array [
    [Function],
    5000,
  ],
]
`;

exports[`retry after long enought time 3`] = `
Array [
  Array [
    "tool",
    "source",
    Array [
      "asset1",
      "asset2",
      "asset3",
    ],
    Object {
      "debug": false,
      "forceREST": false,
      "live": false,
    },
  ],
]
`;

exports[`retry within short time 1`] = `
Object {
  "failCount": 3,
  "instance": undefined,
  "lastFailTimestamp": 1234567890,
  "source": "source",
}
`;

exports[`startAggregate 1`] = `
Array [
  Array [
    Object {
      "period": Object {
        "N": "10",
      },
    },
  ],
  Array [
    Object {
      "period": Object {
        "N": "10",
      },
    },
  ],
]
`;

exports[`startAggregate 2`] = `
Array [
  Array [
    10,
  ],
  Array [
    10,
  ],
]
`;

exports[`startFetching no source 1`] = `
Array [
  Array [
    "tool",
    "gemini",
    Array [
      "quote",
      "base",
    ],
    Object {
      "assets": Array [
        "quote",
        "base",
      ],
      "debug": false,
      "exSources": Array [],
      "forceREST": false,
      "source": "",
      "sources": Array [],
    },
  ],
  Array [
    "tool",
    "kraken",
    Array [
      "quote",
      "base",
    ],
    Object {
      "assets": Array [
        "quote",
        "base",
      ],
      "debug": false,
      "exSources": Array [],
      "forceREST": false,
      "source": "",
      "sources": Array [],
    },
  ],
  Array [
    "tool",
    "gdax",
    Array [
      "quote",
      "base",
    ],
    Object {
      "assets": Array [
        "quote",
        "base",
      ],
      "debug": false,
      "exSources": Array [],
      "forceREST": false,
      "source": "",
      "sources": Array [],
    },
  ],
  Array [
    "tool",
    "bitstamp",
    Array [
      "quote",
      "base",
    ],
    Object {
      "assets": Array [
        "quote",
        "base",
      ],
      "debug": false,
      "exSources": Array [],
      "forceREST": false,
      "source": "",
      "sources": Array [],
    },
  ],
  Array [
    "tool",
    "gemini",
    Array [
      "quote",
      "base",
    ],
    Object {
      "assets": Array [
        "quote",
        "base",
      ],
      "debug": false,
      "exSources": Array [],
      "forceREST": false,
      "source": "",
      "sources": Array [
        "gemini",
        "kraken",
      ],
    },
  ],
  Array [
    "tool",
    "kraken",
    Array [
      "quote",
      "base",
    ],
    Object {
      "assets": Array [
        "quote",
        "base",
      ],
      "debug": false,
      "exSources": Array [],
      "forceREST": false,
      "source": "",
      "sources": Array [
        "gemini",
        "kraken",
      ],
    },
  ],
  Array [
    "tool",
    "gdax",
    Array [
      "quote",
      "base",
    ],
    Object {
      "assets": Array [
        "quote",
        "base",
      ],
      "debug": false,
      "exSources": Array [],
      "forceREST": false,
      "source": "",
      "sources": Array [
        "gemini",
        "kraken",
      ],
    },
  ],
  Array [
    "tool",
    "bitstamp",
    Array [
      "quote",
      "base",
    ],
    Object {
      "assets": Array [
        "quote",
        "base",
      ],
      "debug": false,
      "exSources": Array [],
      "forceREST": false,
      "source": "",
      "sources": Array [
        "gemini",
        "kraken",
      ],
    },
  ],
  Array [
    "tool",
    "gemini",
    Array [
      "someQuote",
      "someBase",
    ],
    Object {
      "assets": Array [],
      "debug": false,
      "exSources": Array [],
      "forceREST": false,
      "pair": "someQuote|someBase",
      "source": "",
      "sources": Array [
        "gemini",
        "kraken",
      ],
    },
  ],
  Array [
    "tool",
    "kraken",
    Array [
      "someQuote",
      "someBase",
    ],
    Object {
      "assets": Array [],
      "debug": false,
      "exSources": Array [],
      "forceREST": false,
      "pair": "someQuote|someBase",
      "source": "",
      "sources": Array [
        "gemini",
        "kraken",
      ],
    },
  ],
  Array [
    "tool",
    "gdax",
    Array [
      "someQuote",
      "someBase",
    ],
    Object {
      "assets": Array [],
      "debug": false,
      "exSources": Array [],
      "forceREST": false,
      "pair": "someQuote|someBase",
      "source": "",
      "sources": Array [
        "gemini",
        "kraken",
      ],
    },
  ],
  Array [
    "tool",
    "bitstamp",
    Array [
      "someQuote",
      "someBase",
    ],
    Object {
      "assets": Array [],
      "debug": false,
      "exSources": Array [],
      "forceREST": false,
      "pair": "someQuote|someBase",
      "source": "",
      "sources": Array [
        "gemini",
        "kraken",
      ],
    },
  ],
]
`;

exports[`startFetching source 1`] = `[Error: invalid source]`;

exports[`startFetching source 2`] = `
Array [
  Array [
    Array [
      "quote|base",
    ],
  ],
]
`;
